# aucont

./: .gitignore  Cargo.toml  README.md  build.rs  log
cluster/: Cargo.toml
cluster/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  libc_wrappers.rs  pipe.rs  raw_process.rs  shell.rs  sys_return.rs  utils.rs
core/src/libc_ext/: lib.c
core/src/redirect_io/: lib.c  mod.rs
exec/: Cargo.toml
exec/src/: main.rs
lib_container/: Cargo.toml
lib_container/src/: container_init_main.rs  factory.rs  lib.rs  result.rs
list/: Cargo.toml
list/src/: main.rs
src/: aucont_paths.rs  check.rs  container.rs  lib.rs  libc_wrappers.rs  pipe.rs  process.rs  raw_process.rs  shell.rs  utils.rs
src/cgroup/: main.rs  mod.rs
src/container/: container_init_main.rs  factory.rs  mod.rs  result.rs
src/exec/: main.rs
src/libc_ext/: mod.rs
src/list/: main.rs
src/redirect_io/: lib.c
src/start/: container_factory.rs  container_init_main.rs  main.rs
src/stop/: main.rs
start/: Cargo.toml
start/src/: main.rs
stop/: Cargo.toml
stop/src/: main.rs
util_cgroup/: Cargo.toml
util_cgroup/src/: lib.rs  main.rs
